--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
     </section>
 
     <section class="slide" id="design">
-        <h2 class="place center">I. Заметки для дизайнера</h2>
+        <h2>I. Заметки для дизайнера</h2>
+        <p>Страница сайта / экран приложения должны выполнять свою функцию. Ещё важны:</p>
+        <ul>
+            <li>Красота и удобство</li>
+            <li>Скорость и экономность</li>
+            <li>Отзывчивость</li>
+            <li>Доступность</li>
+        </ul>
     </section>
 
     <section class="slide design" id="design1">
@@ -103,7 +110,7 @@
                 <ul>
                     <li>Константин Константино&shy;польский</li>
                     <li>В вебе есть переносы</li>
-                    <li>Если мы нарисовали ряд карточек, и предполагается, что их может быть больше/меньше: как они себя будут вести?</li>
+                    <li>Если мы нарисовали ряд карточек, и предполага&shy;ется, что их может быть больше/меньше: как они себя будут вести?</li>
                 </ul>
             </div>
         </div>
@@ -162,6 +169,7 @@
         <h2>Репозиторий</h2>
         <p>Repository — хранилище исходного кода с историей изменений</p>
         <p><code>git init</code> — создать (инициализировать) репозиторий</p>
+        <p><code>git status</code> — узнать текущее состояние <s>в любой непонятной ситуации</s></p>
     </section>
 
     <section class="slide" id="commit">
@@ -219,7 +227,7 @@
 
     <section class="slide" id="definitions">
         <h2>💬 Сопоставьте действия с командами</h2>
-        <p>и напишите в чат в свободной форме, например <q>1a,2b,3c</q></p>
+        <p>и напишите в чат в свободной форме, например <q>1a 2b 3c</q></p>
         <div class="columns two">
             <ol>
                 <li>Скопировать удаленный репозиторий к себе на компьютер</li>
