--- a/index.html
+++ b/index.html
@@ -86,13 +86,20 @@
 
     <section class="slide" id="design">
         <h2>I. Заметки для дизайнера</h2>
-        <p>Страница сайта / экран приложения должны выполнять свою функцию. Ещё важны:</p>
-        <ul>
-            <li>Красота и удобство</li>
-            <li>Скорость и экономность</li>
-            <li>Отзывчивость</li>
-            <li>Доступность</li>
-        </ul>
+        <p>Страница сайта / экран приложения должны выполнять свою функцию.</p>
+        <span>Ещё важны:</span>
+        <div class="columns four">
+            <ul>
+                <li>Красота</li>
+                <li>Удобство</li>
+                <li>Скорость</li>
+            </ul>
+            <ul>
+                <li>Экономность</li>
+                <li>Отзывчивость</li>
+                <li>Доступность</li>
+            </ul>
+        </div>
     </section>
 
     <section class="slide design" id="design1">
