--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
     <section class="slide" id="qa">
         <h2 class="shout shrink">IV. Вопросы</h2>
-        <p class="place bottom note">tg: <a href="https://t.me/dontliem1" target="_blank">@dontliem1</a></p>
+        <p class="place bottom note">Если появятся позже — задавайте в Slack</p>
     </section>
 
     <footer class="badge">
