Multi dates support

--- a/src/task.html
+++ b/src/task.html
@@ -82,7 +82,7 @@
     </li>
     <li>
         <figure>
-            <figcaption>В своём репозитории нажмите на точку <code>.</code> на клавиатуре, чтобы вызвать веб-версию VS Code, и дождитесь окончания загрузки</figcaption>
+            <figcaption>На странице своей копии репозитория нажмите на точку <code>.</code> на клавиатуре, чтобы вызвать веб-версию VS Code, и дождитесь окончания загрузки</figcaption>
             <img src="../pictures/task/repo.png" width="600" alt="">
             <img src="../pictures/task/webeditor.png" width="600" alt="">
         </figure>
@@ -102,14 +102,14 @@
     </li>
     <li>
         <figure>
-            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/students</code>, нажав на нём правой кнопкой мыши, и выбрав <code>Copy</code>, а затем нажав правой кнопкой на папке <code>students</code> и выбрав <code>Paste</code></figcaption>
+            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/30.08.22</code>, нажав на файле правой кнопкой мыши, и выбрав <code>Copy (Копирование)</code>, а затем нажав правой кнопкой на папке <code>30.08.22</code> и выбрав <code>Paste (Вставить)</code></figcaption>
             <img src="../pictures/task/copy.png" width="450" alt="">
             <img src="../pictures/task/paste.png" width="450" alt="">
         </figure>
     </li>
     <li>
         <figure>
-            <figcaption>Переименуйте получившийся файл также как ветку, нажав на нём правой кнопкой мыши и выбрав <code>Rename</code>. В этом примере, так как ветка называлась словом <b>vorobyev</b>, мы ввели его и нажали <code>Enter</code></figcaption>
+            <figcaption>Переименуйте получившийся файл также как ветку, нажав на нём правой кнопкой мыши и выбрав <code>Rename (Переименование)</code>. В этом примере, так как ветка называлась словом <b>vorobyev</b>, мы ввели его и нажали <code>Enter</code></figcaption>
             <img src="../pictures/task/rename1.png" width="450" alt="">
             <img src="../pictures/task/rename2.png" width="300" alt="">
         </figure>
@@ -122,14 +122,14 @@
     </li>
     <li>
         <figure>
-            <figcaption>На вкладке слева <code class="code--orange">Source Control</code> наведите курсор на наш новый файл и нажмите на появившийся <code>+</code> справа. Введите в поле <b>Message</b> сверху сообщение для коммита и нажмите на галочку <code>✓</code></figcaption>
+            <figcaption>На вкладке слева <code class="code--orange">Source Control (Система управления версиями)</code> наведите курсор на наш новый файл и нажмите на появившийся <code>+</code> справа. Введите в поле <b>Message</b> сверху сообщение для коммита и нажмите на галочку <code>✓</code></figcaption>
             <img src="../pictures/task/stage.png" width="450" alt="">
             <img src="../pictures/task/commit.png" width="450" alt="">
         </figure>
     </li>
     <li>
         <figure>
-            <figcaption>Нажмите на кнопку <code>Create pull request</code> (вторая после заголовка <code class="code--orange">Source Control</code>). В открывшейся вкладке пролистайте вниз и нажмите <code class="code--green">Create</code>.</figcaption>
+            <figcaption>Нажмите на кнопку <code>Create pull request</code> (вторая после заголовка). В открывшейся вкладке пролистайте вниз и нажмите <code class="code--green">Create</code>.</figcaption>
             <img src="../pictures/task/pr1.png" width="600" alt=""><br>
             <img src="../pictures/task/pr2.png" width="250" alt="">
             <img src="../pictures/task/pr3.png" width="900" alt="">
