Ссылка на технозависимость

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="columns four">
             <ul>
                 <li>Красота</li>
-                <li>Удобство</li>
+                <li><a href="https://bureau.ru/bb/soviet/20160322/" target="_blank">Удобство</a></li>
                 <li>Скорость</li>
             </ul>
             <ul>
@@ -128,10 +128,11 @@
             <div>
                 <h3>Цвета</h3>
                 <ul>
-                    <li>Проверяйте контрастность.</li>
-                    <li>Заведите палитру цветов и старайтесь не отступать от неё.</li>
-                    <li>Для удобства создания ховеров и состояний можно использовать HSL.</li>
-                    <li>Не используйте прозрачность, если в этом нет необходимости — пишите конечный цвет.</li>
+                    <li>Проверяйте контрастность</li>
+                    <li>Передавайте информацию не только цветом</li>
+                    <li>Заведите палитру цветов и старайтесь не отступать от неё</li>
+                    <li>Для удобства создания ховеров и состояний можно использовать HSL</li>
+                    <li>Не используйте прозрачность, если в этом нет необходимости — пишите конечный цвет</li>
                     <li>В какой цвет красить шапку браузера?</li>
                 </ul>
             </div>
@@ -140,7 +141,7 @@
                 <ul>
                     <li>Заведите текстовые стили и старайтесь не отступать от них.</li>
                     <li>Как должны выглядеть ссылки в тексте?</li>
-                    <li>Шрифт в инпутах не менее 16px</li>
+                    <li>Размер шрифта в полях для ввода текста — не менее 16px</li>
                 </ul>
             </div>
         </div>
@@ -151,14 +152,14 @@
             <div>
                 <h3>Интерактивность</h3>
                 <ul>
-                    <li>Если нужно, продумайте состояния ховеров.</li>
-                    <li>Если нужно сделать горизонтальную/вертикальную прокрутку элемента, решите прячем ли мы скроллбар, оформляем ли его по своему, или оставляем стандартный.</li>
+                    <li>Если нужно, продумайте состояния ховеров</li>
+                    <li>Если нужно сделать горизонтальную/вертикальную прокрутку элемента, решите прячем ли мы скроллбар, оформляем ли его по своему, или оставляем стандартный</li>
                 </ul>
             </div>
             <div>
                 <h3>Картинки</h3>
                 <ul>
-                    <li>Фавиконка для сайта — svg или png до 512х512. Можно отдельно для светлой и темной темы.</li>
+                    <li>Фавиконка для сайта — svg или png до 512х512. Можно отдельно для светлой и темной темы</li>
                     <li>Обложка для шеринга в соцсетях 1280×640px</li>
                 </ul>
             </div>
@@ -167,8 +168,8 @@
 
     <section class="slide" id="vcs">
         <h2>II. Системы контроля версий</h2>
-        <p>Придуманы, чтобы следить за историей изменений исходного кода и комфортно работать большой командой. Самая популярная — Git.</p>
         <p class="note"><a href="https://doka.guide/tools/version-control/" target="_blank">VCS</a> — Version Control Systems</p>
+        <p>Придуманы, чтобы следить за историей изменений исходного кода и комфортно работать большой командой. Самая популярная — Git.</p>
         <p><a href="https://github.com" target="_blank">GitHub</a> • <a href="https://code.visualstudio.com" target="_blank">VS Code</a> • <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a></p>
     </section>
 
