--- a/src/task.html
+++ b/src/task.html
@@ -16,6 +16,9 @@
             font-size: 150%;
             line-height: 1.6;
         }
+        ol {
+            padding-inline-start: 2em;
+        }
         a {
             color: inherit;
             display: inline-block;
@@ -23,7 +26,6 @@
         }
         code {
             border: 1px solid;
-            color: #fff;
             display: inline-block;
             padding: .25em .5em;
             border-radius: 6px;
@@ -32,12 +34,14 @@
         .code--green {
             background-color: rgb(46, 160, 67);
             border: none;
+            color: #fff;
         }
         .code--orange {
             border: none;
             border-left: 3px solid #E88D74;
-            background-color: rgba(128,128,128,.2);
+            background-color: rgb(50,50,50);
             border-radius: 0;
+            color: #fff;
         }
         img {
             vertical-align: top;
@@ -89,7 +93,7 @@
     </li>
     <li>
         <figure>
-            <figcaption>В левом нижнем углу нажмите на <code>main</code> и создайте новую ветку <code style="background-color: #3B3F47;">Create new branch</code>, написав по-английски свою фамилию/ник и переключитесь на неё <code class="code--green">Switch to branch</code></figcaption>
+            <figcaption>В левом нижнем углу нажмите на <code>main</code> и создайте новую ветку <code style="background-color: #3B3F47; color: #fff;">Create new branch</code>, написав по-английски свою фамилию/ник и переключитесь на неё <code class="code--green">Switch to branch</code></figcaption>
             <img src="../pictures/task/branch1.png" width="300" alt="">
             <img src="../pictures/task/branch2.png" width="300" alt="">
             <img src="../pictures/task/branch3.png" width="600" alt="">
@@ -102,7 +106,7 @@
     </li>
     <li>
         <figure>
-            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/30.08.22</code>, нажав на файле правой кнопкой мыши, и выбрав <code>Copy (Копирование)</code>, а затем нажав правой кнопкой на папке <code>30.08.22</code> и выбрав <code>Paste (Вставить)</code></figcaption>
+            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/18.10.22</code>, нажав на файле правой кнопкой мыши, и выбрав <code>Copy (Копирование)</code>, а затем нажав правой кнопкой на папке <code>18.10.22</code> и выбрав <code>Paste (Вставить)</code></figcaption>
             <img src="../pictures/task/copy.png" width="450" alt="">
             <img src="../pictures/task/paste.png" width="450" alt="">
         </figure>
