--- a/src/cats/index.html
+++ b/src/cats/index.html
@@ -32,6 +32,7 @@
 </header>
 <main>
 <ul>
+    <li><a href="18.10.22/">18 октября 2022</a></li>
     <li><a href="30.08.22/">30 августа 2022</a></li>
     <li><a href="12.07.22/">12 июля 2022</a></li>
 </ul>
