--- a/src/task.html
+++ b/src/task.html
@@ -106,7 +106,7 @@
     </li>
     <li>
         <figure>
-            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/18.10.22</code>, нажав на файле правой кнопкой мыши, и выбрав <code>Copy (Копирование)</code>, а затем нажав правой кнопкой на папке <code>18.10.22</code> и выбрав <code>Paste (Вставить)</code></figcaption>
+            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/15.12.22</code>, нажав на файле правой кнопкой мыши, и выбрав <code>Copy (Копирование)</code>, а затем нажав правой кнопкой на папке <code>15.12.22</code> и выбрав <code>Paste (Вставить)</code></figcaption>
             <img src="../pictures/task/copy.png" width="450" alt="">
             <img src="../pictures/task/paste.png" width="450" alt="">
         </figure>
@@ -126,7 +126,7 @@
     </li>
     <li>
         <figure>
-            <figcaption>На вкладке слева <code class="code--orange">Source Control (Система управления версиями)</code> наведите курсор на наш новый файл и нажмите на появившийся <code>+</code> справа. Введите в поле <b>Message</b> сверху сообщение для коммита и нажмите на галочку <code>✓</code></figcaption>
+            <figcaption>На вкладке слева <code class="code--orange">Source Control (Система управления версиями)</code> наведите курсор на наш новый файл и нажмите на появившийся <code>+</code> справа. Введите в поле <b> (Сообщение)</b> сверху короткое описание коммита и нажмите на зеленую кнопку <code class="code--green">Commit & Push (Фиксация и отправка)</code></figcaption>
             <img src="../pictures/task/stage.png" width="450" alt="">
             <img src="../pictures/task/commit.png" width="450" alt="">
         </figure>
