--- a/src/task.html
+++ b/src/task.html
@@ -141,6 +141,23 @@
     </li>
     <li>Напишите в чат воркшопа «Готово»!</li>
 </ol>
+<details>
+    <summary>Если редактор не позволяет создать ветку</summary>
+    <ol>
+        <li>
+            <figure>
+                <figcaption>Перейдите в <a href="https://github.com/dontliem1/product-designer-webinar/tree/main/src/15.12.22" target="_blank">папку 15.12.12</a>, и нажмите <code>Add file > Create new file</code></figcaption>
+                <img src="../pictures/task/alternate1.png" width="900" alt="">
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <figcaption>Введите название файла (Name your file...) с <b>.md</b> на конце, например <code>vorobyev.md</code>. В сам файл (Enter file contents here) введите своё имя, и нажмите внизу кнопку <code class="code--green">Propose new file</code></figcaption>
+                <img src="../pictures/task/alternate2.png" width="900" alt="">
+            </figure>
+        </li>
+    </ol>
+</details>
 </main>
 <footer>
     <a href="../">Сайт воркшопа</a>
