--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
     <section class="slide" id="qa">
         <h2 class="shout shrink">IV. Вопросы</h2>
-        <p class="place bottom note">Если появятся позже — задавайте в Slack</p>
+        <p class="place bottom note">Если появятся позже — задавайте в Пачку/Slack</p>
     </section>
 
     <footer class="badge">
