pointer on summary

--- a/src/task.html
+++ b/src/task.html
@@ -64,6 +64,9 @@
         li::marker {
             font-size: 1.5em;
         }
+        summary {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
